14/03/24 ultima version del Genesis hasta donde trabaje con mi propia idea. a partir de esta fecha trabajaremos bajo la estructura del proyecto dado por el Profesor Gregorio. Muchas gracias. Cambios implementados hasta aqui: * Validacion de usuario y permisos * Manejo de JTables en cada vista Registro. Pero esto vamos a cambiar. A partir de ahora las vistas Registros no tendran sus propias JTables sino que existira una ventana w_buscar que mostrara los registros y este sera utilizado por todas las ventanas Registros y mas. * Vamos a eliminar el controlador AuthController, esto debido a que la funcion iniciar sesion solamente se utiliza en LOGIN por lo que no es necesario llevarlo al controlador, y luego la funcion de validarPermisos para mostrar menus solo lo utilizamos en la ventana Principal, y luego la funcion validarPermiso para las ventanas internas lo llevamos a Tools porque solo es una funcion y la vamos a tener en Tools con las demas funciones de ayuda, para no tener una funcion AuthController solo con una funcion. * Los datos de sesion del usuario vamos a mantenerlos en conexion.

--- a/src/main/java/com/genesis/vistas/Login.form
+++ b/src/main/java/com/genesis/vistas/Login.form
@@ -23,7 +23,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="formPanel" min="-2" max="-2" attributes="0"/>
+          <Component id="formPanel" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -42,7 +42,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="48" pref="48" max="-2" attributes="0"/>
@@ -56,14 +56,14 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="btnEntrar" min="-2" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="textFieldPassword" max="32767" attributes="0"/>
-                                  <Component id="textFieldUsuario" min="-2" pref="130" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="textFieldUsuario" pref="130" max="32767" attributes="0"/>
+                                  <Component id="textFieldPassword" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="35" max="32767" attributes="0"/>
+                  <EmptySpace pref="60" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -113,11 +113,6 @@
             <Property name="text" type="java.lang.String" value="Password"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="textFieldPassword">
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
-          </AuxValues>
-        </Component>
         <Component class="javax.swing.JButton" name="btnEntrar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Entrar"/>
@@ -128,6 +123,11 @@
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="textFieldPassword">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textFieldPasswordKeyPressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
